--- a/blog-client/admin/css/update-post.css
+++ b/blog-client/admin/css/update-post.css
@@ -2,7 +2,7 @@
 /* update-post css*/
 
 body{
-    background-color:rgb(226, 224, 224);
+    background-color:rgb(240, 234, 234);
 
     font-family:SFProDisplay-Regular, Helvetica, Arial, sans-serif;
     /*background-color: rgb(211, 211, 228);*/
@@ -61,15 +61,17 @@ form .input{
 
 #update{
     display: block;
-    width: 42%;
-    margin-left: 30%;
+    width: 10%;
+    margin-left:45%;
     height:2em;
+    background-color: #29497c;
+    color:white;
 }
 
 #goback-link{
     display: block;
     width: 33%;
-    margin-left: 50%;
+    margin-left: 48%;
     margin-top: 1em;
 }
 
