--- a/blog-client/admin/css/update-post.css
+++ b/blog-client/admin/css/update-post.css
@@ -5,13 +5,11 @@ body{
     /*background-color:rgb(240, 234, 234);*/
     background-image: url('img/blueboard.jpg');
     background-size: cover;
-
     font-family:SFProDisplay-Regular, Helvetica, Arial, sans-serif;
-    /*background-color: rgb(211, 211, 228);*/
+   
 }
 
 #header-container{
-    /*background-color: #29497c;*/
     height: 4.5em;
     width:100%;
 }
@@ -32,41 +30,51 @@ body{
  
 }
 
+form{
+    background-color:rgba(7, 81, 177, 0.2);
+    width:40%;
+    margin-left: 45%;
+    margin-top: 3em;
+    color:rgb(35, 3, 109);
+    border-radius: 10%;
+}
 
 form .input{
     display: block;
-    margin-left: 45%;
-    margin-bottom: 1em;
-    margin-top: 1em;
+    margin:1em;
+    padding: 0.8em;
 }
 
 .input label,
 .input input{
     display: block;
-    width: 60%;
-    margin-top: 0.5em; 
+    width: 100%;
+    margin-top:0.5em; 
     height:2em; 
     color:rgb(19, 2, 58);
+    border: darkblue;
 }
-
+form .input label #title-lable{
+    padding-top:2em;
+}
 .input textarea{
     display: block;
-    width: 60%;
+    width: 100%;
     margin-top: 0.5em;  
 }
 
 #checkbox{
     display: block;
-    width: 32%;
-    margin-left: 45%;
-    color:rgb(19, 3, 58);
+    width: 85%;
+    color:rgb(8, 2, 24);
+    margin: 1em;
     
 }
 
 #update{
     display: block;
-    width: 10%;
-    margin-left:54%;
+    width: 15%;
+    margin-left:48%;
     height:2em;
     background-color: rgb(35, 4, 109);
     color:white;
@@ -75,7 +83,7 @@ form .input{
 #goback-link{
     display: block;
     width: 33%;
-    margin-left: 57%;
+    margin-left: 50%;
     margin-top: 1em;
 }
 
