--- a/blog-client/admin/css/manage-posts.css
+++ b/blog-client/admin/css/manage-posts.css
@@ -9,21 +9,39 @@ body {
    color:rgb(110, 10, 153);
    font-weight: 800;
 }
-h1{
+h4{
     
+    text-align: right;
+    padding-top: 20px;
+    font-size: 2em;
+    display: block;
+    margin:0px;
+    margin-right:20px;
+    
+}
+hr{
+    border: none;
+    border-top: 3px double;
+    color:  rgb(179, 125, 230);
+    height: 5px;
+    margin-left: 80%;
+    margin-right: 10px;
+}
+h2{
     text-align: center;
-    padding-top: 40px;
-    font-size: 4em;
-    
+    display: block;
+    margin:0px;
 }
 a{
     text-decoration: none;
+    
     
 }
 .container{
     display: flex;
     flex-direction: column;
-    text-align: center;  
+    text-align: center; 
+    
 }
 #table-posts tr,td{
 
@@ -32,15 +50,20 @@ a{
 td{
     text-align: center;
     line-height: 25px;
+    font-size: 1em;
+    font-weight: 550;
+    
 }
 table{
 padding-left: 10px;
 padding-right: 10px;
-    padding-top: 30px;
+    padding-top: 15px;
 }
  a:hover{
 background-color: powderblue;
 background-size: auto;  
+color: rgb(121, 66, 177);
+border-radius: 5px;
 }
 
 
